clean up warnings (#1269)
* warnings in sdo, moxy, dbws
* add override ann
* remove redundant casts, inheritdoc

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit ed8460efc9cee60bc90aeb2fd457f368dd79e0d9)