@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -206,11 +206,9 @@ public class SOAPResponseWriter {
         XMLDescriptor descriptor = resultDescriptors.get(op.getName());
         SOAPResponse response = null;
         try {
-            response = (SOAPResponse) descriptor.getJavaClass().newInstance();
-        } catch (InstantiationException ie) {
+            response = (SOAPResponse) descriptor.getJavaClass().getConstructor().newInstance();
+        } catch (ReflectiveOperationException ie) {
             throw new SOAPException(ie);
-        } catch (IllegalAccessException iae) {
-            throw new SOAPException(iae);
         }
         response.setResult(result);
 
